--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sailfish</groupId>
-    <artifactId>tdd-kata</artifactId>
+    <artifactId>code-kata</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
